<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-22dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                app:elevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_24"
                app:tint="@color/design_default_color_error"
                app:backgroundTint="@color/white"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/thumbnail"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thumbnail" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/audio_tours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:alpha="0.45"
                android:text="@string/audio_tours"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/starImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toStartOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:srcCompat="@drawable/baseline_star_rate_24" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:layout_marginTop="10dp"
                android:text="@string/rating"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/rating_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/count"
                android:textAlignment="textEnd"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/durationImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_tours"
                app:srcCompat="@drawable/ic_baseline_timer_24"
                app:tint="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/durationImageView"
                app:layout_constraintTop_toBottomOf="@id/audio_tours" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.5dp"
                android:text="@string/minutes"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/durationTextView"
                app:layout_constraintTop_toBottomOf="@id/audio_tours" />

            <TextView
                android:id="@+id/fromTextViewRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:text="@string/from"
                android:textStyle="bold"
                android:textColor="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/retail_price" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/languagesImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durationImageView"
                app:srcCompat="@drawable/ic_baseline_headset_24"
                />

            <TextView
                android:id="@+id/languagesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:text="@string/audio_tour_in_3_languages"
                android:textColor="@color/light_gray"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/languagesImageView"
                app:layout_constraintTop_toBottomOf="@id/durationImageView" />

            <TextView
                android:id="@+id/retail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/price"
                android:textAlignment="viewStart"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/euroImageView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fromTextViewRight"
                app:srcCompat="@drawable/ic_baseline_euro_symbol_24"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/areaImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/languagesImageView"
                app:srcCompat="@drawable/ic_baseline_collections_24"
                />

            <TextView
                android:id="@+id/areaTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/_360_images"
                android:textAlignment="center"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/areaImageView"
                app:layout_constraintTop_toBottomOf="@id/languagesImageView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/perPersonTextViewRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="15dp"
                android:text="@string/per_person"
                android:layout_marginTop="-20dp"
                android:textStyle="bold"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/retail_price" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>